# lib_ADS7830

./: .gitignore  ADS7830.c  ADS7830.h  CMakeLists.txt  LICENSE  README.md
cpm/: CPM.cmake
